--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,18 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "CommonJS",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es6",
-    "noImplicitAny": true,
-    "moduleResolution": "Node",
-    "sourceMap": true,
+	"compilerOptions": {
+		"target": "es2016",
+		"module": "commonjs",
+    "rootDir": "src",
     "outDir": "dist",
-        "rootDir": "src",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
-  },
-  "include": ["./src/**/*"]
+		"strict": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true
+	}
 }
